# taskgen

./: ACTION.md  AGENTS.md  Dockerfile.action  README.md  action.yml  pyproject.toml  workflow-template.yml
.github/workflows/: harbor-check-self-test.yml  ingest-task.yml
docs/: architecture.md  swe_smith_comparison.md
examples/axios__axios-7150/environment/: bug.patch
examples/axios__axios-7150/solution/: fix.patch
examples/burntsushi__ripgrep-3189/environment/: bug.patch
examples/burntsushi__ripgrep-3189/solution/: fix.patch
examples/colinhacks__zod-5263/environment/: bug.patch
examples/colinhacks__zod-5263/solution/: fix.patch
examples/hashicorp__consul-23085/environment/: bug.patch
examples/hashicorp__consul-23085/solution/: fix.patch
examples/hashicorp__consul-23085/tests/agent/config/: runtime_test.go
examples/kludex__starlette-2949/environment/: bug.patch
examples/kludex__starlette-2949/solution/: fix.patch
src/taskgen/: __init__.py  cli.py  config.py
src/taskgen/action/: __init__.py  entrypoint.sh
src/taskgen/analyze/: __init__.py  classifier.py  run.py
src/taskgen/create/: __init__.py  claude_code_runner.py  create.py  diff_utils.py  orchestrator.py  pr_fetcher.py  repo_cache.py  task_instruction.py  task_reference.py  task_skeleton.py  utils.py
src/taskgen/farm/: farm_hand.py  fetcher.py  state.py  stream_farm.py
src/taskgen/reversal/: reversal.py
src/taskgen/tools/: __init__.py  analyze.py  clean.py  harbor_runner.py  network_isolation.py  validate.py  validation.py
