[project]
name = "taskgen"
version = "0.1.0"
description = "Pipeline to convert GitHub PRs into Harbor tasks"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.13"
dependencies = [
    "PyGithub>=2.1.1",
    "GitPython>=3.1.40",
    "PyYAML>=6.0.1",
    "requests>=2.31.0",
    "click>=8.1.7",
    "typer>=0.16.0",
    "rich>=14.1.0",
    "docker>=7.0.0",
    "openai>=1.43.0",
    "pydantic>=2.8.2",
    "python-dotenv>=1.0.0",
    "claude-agent-sdk",
    # Hard requirement: laude-institute/harbor; uv maps to Git HEAD via tool.uv.sources
    "harbor",
]

[project.scripts]
# Console entry to run the Typer CLI directly
taskgen = "taskgen.cli:app"
harbor = "harbor.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.12.0",
    "ruff>=0.1.8",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "pre-commit>=3.5.0",
]

[tool.uv.sources]
harbor = { git = "https://github.com/laude-institute/harbor" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/taskgen"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["taskgen"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
